--- a/Results/styles.css
+++ b/Results/styles.css
@@ -5,3 +5,20 @@ a:hover {
 a {
 	background-color: black;
 }
+#filterConfirm {
+	
+	background-color: #337ab7;
+	border-style: none;
+	border-radius: 2px;
+	padding-left: 5px;
+	padding-right: 5px;
+
+	padding-top: 2px;
+	padding-bottom: 2px;
+	color: fff;
+	  
+}
+
+#filterForm {
+	border-radius: 5px;
+}
